--- a/package.json
+++ b/package.json
@@ -1,7 +1,20 @@
 {
   "name": "rsp-blc",
   "version": "0.1.0",
-  "private": true,
+  "description": "A wrapper around broken-link-checker to provider briefer results",
+  "license": "Apache-2.0",
+  "homepage": "https://git.corp.adobe.com/taborski/rsp-blc",
+  "bugs": "https://git.corp.adobe.com/taborski/rsp-blc/issues",
+  "repository": {
+    "url": "https://github.com/taborski/rsp-blc",
+    "type": "git"
+  },
+  "keywords": [
+    "website broken link checker"
+  ],
+  "bin": {
+    "rsp-blc": "src/blcReport.js"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
