--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rsp-blc",
   "version": "0.1.0",
-  "description": "A wrapper around broken-link-checker to provider briefer results",
+  "description": "A wrapper around broken-link-checker to provider briefer results.",
   "license": "Apache-2.0",
   "homepage": "https://git.corp.adobe.com/taborski/rsp-blc",
   "bugs": "https://git.corp.adobe.com/taborski/rsp-blc/issues",
@@ -19,6 +19,6 @@
     "broken-link-checker": "0.7.8"
   },
   "scripts": {
-    "start": "node ./src/blcReport.js"
+    "run": "node ./src/blcReport.js"
   }
 }
